--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  color-scheme: dark;
+}
+
+body {
+  margin: 0;
+  min-height: 100vh;
+  background-color: #111827;
+  color: white;
+}
+/* 
+#root {
+  min-height: 100%;
+  overflow-y: hidden;
+} */
